--- a/packages/components/src/components/shell/shell.scss
+++ b/packages/components/src/components/shell/shell.scss
@@ -85,6 +85,7 @@ body {
 		}
 	}
 
+	// DESKTOP
 	@include screen-sizes.screen-min-max(
 		(
 			min: "sm"
@@ -97,11 +98,20 @@ body {
 			grid-template-columns:
 				[control-panel] auto
 				[main] 1fr;
+
+			> .db-sub-navigation-container {
+				> .db-navigation {
+					--db-overflow-scroll-button-inset-block: #{variables.$db-spacing-fixed-md};
+					> menu {
+						--db-navigation-item-group-menu-inset-block-start: #{variables.$db-spacing-fixed-md};
+						padding-block: variables.$db-spacing-fixed-md;
+					}
+				}
+			}
 		}
 
 		&[data-control-panel-desktop-position="top"] {
-			&:not([data-sub-navigation-desktop-position]),
-			&[data-sub-navigation-desktop-position="top"] {
+			&:not([data-sub-navigation-desktop-position="left"]) {
 				grid-template-areas:
 					"control-panel"
 					"sub-navigation"
@@ -112,11 +122,24 @@ body {
 					[main] 1fr;
 
 				> .db-sub-navigation-container {
-					@include helpers.divider("bottom");
+					> .db-navigation {
+						--db-overflow-scroll-button-inset-block: #{variables.$db-spacing-fixed-xs};
+						> menu {
+							--db-navigation-item-group-menu-inset-block-start: #{variables.$db-spacing-fixed-xs};
+							padding-block: variables.$db-spacing-fixed-xs;
+						}
+					}
 				}
+			}
+		}
 
-				> .db-sub-navigation-container > .db-navigation {
-					--db-overflow-scroll-button-inset-block: #{variables.$db-spacing-fixed-xs};
+		&:not(
+				[data-control-panel-desktop-position="top"][data-sub-navigation-desktop-position="left"]
+			) {
+			> .db-sub-navigation-container {
+				@include helpers.divider("bottom");
+
+				> .db-navigation {
 					--db-overflow-scroll-button-inset-inline-start: calc(
 						#{variables.$db-spacing-fixed-sm} / 2
 					);
@@ -125,109 +148,105 @@ body {
 					@include control-panel-desktop.horizontal-navigation;
 
 					> menu {
-						--db-navigation-item-group-menu-inset-block-start: #{variables.$db-spacing-fixed-xs};
-						padding-block: variables.$db-spacing-fixed-xs;
-
 						/* workaround for showing correct scrolling and focus */
-						padding-inline-start: calc(
+						padding-inline: calc(
 							#{variables.$db-spacing-fixed-sm} / 2
 						);
-						margin-inline-start: calc(
+						margin-inline: calc(
 							#{variables.$db-spacing-fixed-sm} / 2
 						);
 					}
 				}
 
-				> .db-sub-navigation-container
-					> .db-shell-sub-navigation-button {
+				> .db-shell-sub-navigation-button {
 					display: none;
 				}
 			}
+		}
 
-			&[data-sub-navigation-desktop-position="left"] {
-				grid-template-areas:
-					"control-panel control-panel"
-					"sub-navigation main";
-				grid-template-rows:
-					[control-panel] max-content
-					[main] 1fr;
-				grid-template-columns:
-					[control-panel] auto
-					[main] 1fr;
+		&[data-control-panel-desktop-position="top"][data-sub-navigation-desktop-position="left"] {
+			grid-template-areas:
+				"control-panel control-panel"
+				"sub-navigation main";
+			grid-template-rows:
+				[control-panel] max-content
+				[main] 1fr;
+			grid-template-columns:
+				[control-panel] auto
+				[main] 1fr;
 
+			> .db-sub-navigation-container {
+				display: grid;
+
+				@include helpers.divider("right");
+
+				> .db-navigation {
+					max-inline-size: screen-sizes.$db-breakpoint-xs;
+				}
+			}
+
+			@media screen and (prefers-reduced-motion: no-preference) {
+				> .db-sub-navigation-container
+					> .db-shell-sub-navigation-button {
+					.db-button {
+						&::before {
+							transition: transform
+								variables.$db-transition-straight-functional;
+						}
+					}
+				}
+			}
+
+			&[data-open="false"] {
 				> .db-sub-navigation-container {
-					display: grid;
+					inline-size: auto;
+					/* stylelint-disable-next-line declaration-property-value-no-unknown */
+					inline-size: calc-size(auto, size);
 
-					@include helpers.divider("right");
+					grid-template-areas: "button";
+					grid-template-rows: [button] 1fr;
 
 					> .db-navigation {
-						max-inline-size: screen-sizes.$db-breakpoint-xs;
+						display: none;
 					}
-				}
 
-				@media screen and (prefers-reduced-motion: no-preference) {
-					> .db-sub-navigation-container
-						> .db-shell-sub-navigation-button {
+					> .db-shell-sub-navigation-button {
+						justify-content: center;
+
 						.db-button {
+							block-size: 100%;
+							border-radius: 0;
+
 							&::before {
-								transition: transform
-									variables.$db-transition-straight-functional;
+								transform: form-components.$dropdown-icon-transform;
 							}
 						}
 					}
 				}
+			}
 
-				&[data-open="false"] {
-					> .db-sub-navigation-container {
-						inline-size: fit-content;
-						/* stylelint-disable-next-line declaration-property-value-no-unknown */
-						inline-size: calc-size(fit-content, size);
+			&[data-open="true"] {
+				> .db-sub-navigation-container {
+					grid-template-areas:
+						"navigation"
+						"button";
+					grid-template-rows:
+						[navigation] 1fr
+						[button] auto;
 
-						grid-template-areas: "button";
-						grid-template-rows: [button] 1fr;
+					> .db-navigation {
+						overflow: hidden auto;
 
-						> .db-navigation {
-							display: none;
-						}
-
-						> .db-shell-sub-navigation-button {
-							justify-content: center;
-
-							.db-button {
-								block-size: 100%;
-								border-radius: 0;
-
-								&::before {
-									transform: form-components.$dropdown-icon-transform;
-								}
-							}
-						}
+						@include control-panel-desktop.vertical-navigation;
 					}
-				}
 
-				&[data-open="true"] {
-					> .db-sub-navigation-container {
-						grid-template-areas:
-							"navigation"
-							"button";
-						grid-template-rows:
-							[navigation] 1fr
-							[button] auto;
+					> .db-shell-sub-navigation-button {
+						padding-block: variables.$db-spacing-fixed-xs;
+						padding-inline: variables.$db-spacing-fixed-lg;
+						justify-content: end;
+						margin-block-start: auto;
 
-						> .db-navigation {
-							overflow: hidden auto;
-
-							@include control-panel-desktop.vertical-navigation;
-						}
-
-						> .db-shell-sub-navigation-button {
-							padding-block: variables.$db-spacing-fixed-xs;
-							padding-inline: variables.$db-spacing-fixed-lg;
-							justify-content: end;
-							margin-block-start: auto;
-
-							@include helpers.divider("top");
-						}
+						@include helpers.divider("top");
 					}
 				}
 			}
@@ -238,6 +257,7 @@ body {
 		}
 	}
 
+	// MOBILE
 	@include screen-sizes.screen-min-max(
 		(
 			max: "sm"
