--- a/packages/components/src/components/shell/shell.scss
+++ b/packages/components/src/components/shell/shell.scss
@@ -6,6 +6,9 @@
 @use "../../styles/internal/control-panel-mobile";
 @use "../../styles/internal/form-components";
 
+@forward "shell-desktop";
+@forward "shell-mobile";
+
 %fade-in-loading-fonts {
 	&[data-fade-in="true"] {
 		opacity: 0;
@@ -53,7 +56,6 @@ body {
 
 		> .db-shell-sub-navigation-button {
 			grid-area: button;
-			display: flex;
 		}
 
 		> .db-navigation {
@@ -82,254 +84,6 @@ body {
 	&[data-control-panel-mobile-position="bottom"] {
 		> .db-control-panel-mobile {
 			@extend %control-panel-mobile-position-bottom;
-		}
-	}
-
-	// DESKTOP
-	@include screen-sizes.screen-min-max(
-		(
-			min: "sm"
-		)
-	) {
-		&[data-control-panel-desktop-position="left"] {
-			grid-template-areas:
-				"control-panel sub-navigation"
-				"control-panel main";
-			grid-template-columns:
-				[control-panel] auto
-				[main] 1fr;
-
-			> .db-sub-navigation-container {
-				> .db-navigation {
-					--db-overflow-scroll-button-inset-block: #{variables.$db-spacing-fixed-md};
-					> menu {
-						--db-navigation-item-group-menu-inset-block-start: #{variables.$db-spacing-fixed-md};
-						padding-block: variables.$db-spacing-fixed-md;
-					}
-				}
-			}
-		}
-
-		&[data-control-panel-desktop-position="top"] {
-			&:not([data-sub-navigation-desktop-position="left"]) {
-				grid-template-areas:
-					"control-panel"
-					"sub-navigation"
-					"main";
-				grid-template-rows:
-					[control-panel] max-content
-					[sub-navigation] max-content
-					[main] 1fr;
-
-				> .db-sub-navigation-container {
-					> .db-navigation {
-						--db-overflow-scroll-button-inset-block: #{variables.$db-spacing-fixed-xs};
-						> menu {
-							--db-navigation-item-group-menu-inset-block-start: #{variables.$db-spacing-fixed-xs};
-							padding-block: variables.$db-spacing-fixed-xs;
-						}
-					}
-				}
-			}
-		}
-
-		&:not(
-				[data-control-panel-desktop-position="top"][data-sub-navigation-desktop-position="left"]
-			) {
-			> .db-sub-navigation-container {
-				@include helpers.divider("bottom");
-
-				> .db-navigation {
-					--db-overflow-scroll-button-inset-inline-start: calc(
-						#{variables.$db-spacing-fixed-sm} / 2
-					);
-					display: grid;
-
-					@include control-panel-desktop.horizontal-navigation;
-
-					> menu {
-						/* workaround for showing correct scrolling and focus */
-						padding-inline: calc(
-							#{variables.$db-spacing-fixed-sm} / 2
-						);
-						margin-inline: calc(
-							#{variables.$db-spacing-fixed-sm} / 2
-						);
-					}
-				}
-
-				> .db-shell-sub-navigation-button {
-					display: none;
-				}
-			}
-		}
-
-		&[data-control-panel-desktop-position="top"][data-sub-navigation-desktop-position="left"] {
-			grid-template-areas:
-				"control-panel control-panel"
-				"sub-navigation main";
-			grid-template-rows:
-				[control-panel] max-content
-				[main] 1fr;
-			grid-template-columns:
-				[control-panel] auto
-				[main] 1fr;
-
-			> .db-sub-navigation-container {
-				display: grid;
-
-				@include helpers.divider("right");
-
-				> .db-navigation {
-					max-inline-size: screen-sizes.$db-breakpoint-xs;
-				}
-			}
-
-			@media screen and (prefers-reduced-motion: no-preference) {
-				> .db-sub-navigation-container
-					> .db-shell-sub-navigation-button {
-					.db-button {
-						&::before {
-							transition: transform
-								variables.$db-transition-straight-functional;
-						}
-					}
-				}
-			}
-
-			&[data-open="false"] {
-				> .db-sub-navigation-container {
-					inline-size: auto;
-					/* stylelint-disable-next-line declaration-property-value-no-unknown */
-					inline-size: calc-size(auto, size);
-
-					grid-template-areas: "button";
-					grid-template-rows: [button] 1fr;
-
-					> .db-navigation {
-						display: none;
-					}
-
-					> .db-shell-sub-navigation-button {
-						justify-content: center;
-
-						.db-button {
-							block-size: 100%;
-							border-radius: 0;
-
-							&::before {
-								transform: form-components.$dropdown-icon-transform;
-							}
-						}
-					}
-				}
-			}
-
-			&[data-open="true"] {
-				> .db-sub-navigation-container {
-					grid-template-areas:
-						"navigation"
-						"button";
-					grid-template-rows:
-						[navigation] 1fr
-						[button] auto;
-
-					> .db-navigation {
-						overflow: hidden auto;
-
-						@include control-panel-desktop.vertical-navigation;
-					}
-
-					> .db-shell-sub-navigation-button {
-						padding-block: variables.$db-spacing-fixed-xs;
-						padding-inline: variables.$db-spacing-fixed-lg;
-						justify-content: end;
-						margin-block-start: auto;
-
-						@include helpers.divider("top");
-					}
-				}
-			}
-		}
-
-		> .db-control-panel-mobile {
-			display: none;
-		}
-	}
-
-	// MOBILE
-	@include screen-sizes.screen-min-max(
-		(
-			max: "sm"
-		)
-	) {
-		&[data-control-panel-mobile-position="top"] {
-			grid-template-areas:
-				"control-panel"
-				"sub-navigation"
-				"main";
-			grid-template-rows:
-				[control-panel] auto
-				[control-panel] auto
-				[main] 1fr;
-		}
-
-		&[data-control-panel-mobile-position="bottom"] {
-			grid-template-areas:
-				"sub-navigation"
-				"main"
-				"control-panel";
-			grid-template-rows:
-				[control-panel] auto
-				[main] 1fr
-				[control-panel] auto;
-		}
-
-		&[data-sub-navigation-mobile-position="hidden"] {
-			> .db-sub-navigation-container > .db-navigation {
-				display: none;
-			}
-		}
-
-		&:not([data-sub-navigation-mobile-position]),
-		&[data-sub-navigation-mobile-position="top"] {
-			> .db-sub-navigation-container {
-				@include helpers.divider("bottom");
-			}
-
-			> .db-sub-navigation-container > .db-navigation {
-				--db-overflow-scroll-button-inset-block: #{variables.$db-spacing-fixed-xs};
-				--db-overflow-scroll-button-inset-inline-start: 0;
-				display: grid;
-
-				@include control-panel-desktop.horizontal-navigation(false);
-
-				> .overflow-scroll-left-button,
-				> .overflow-scroll-right-button {
-					display: none;
-				}
-
-				> menu {
-					--db-navigation-item-group-menu-inset-block-start: #{variables.$db-spacing-fixed-xs};
-					padding-block: variables.$db-spacing-fixed-xs;
-
-					/* workaround for showing correct scrolling and focus */
-					padding-inline-start: calc(
-						#{variables.$db-spacing-fixed-sm} / 2
-					);
-					margin-inline-start: calc(
-						#{variables.$db-spacing-fixed-sm} / 2
-					);
-				}
-			}
-		}
-
-		> .db-sub-navigation-container > .db-shell-sub-navigation-button {
-			display: none;
-		}
-
-		> .db-control-panel-desktop {
-			display: none;
 		}
 	}
 }
