--- a/packages/components/src/components/navigation-item-group/navigation-item-group-menu-tree.scss
+++ b/packages/components/src/components/navigation-item-group/navigation-item-group-menu-tree.scss
@@ -9,14 +9,15 @@
 	margin: 0;
 	display: flex;
 	flex-direction: column;
-	height: 0;
+	block-size: 0;
 	visibility: hidden;
 	overflow: hidden;
 	padding-inline-start: calc(#{form-components.$font-size-height});
 
 	@media screen and (prefers-reduced-motion: no-preference) {
 		& {
-			transition: block-size #{variables.$db-transition-straight-emotional};
+			transition: block-size
+				#{variables.$db-transition-straight-emotional};
 		}
 	}
 
