--- a/packages/components/src/styles/internal/_popover-component.scss
+++ b/packages/components/src/styles/internal/_popover-component.scss
@@ -143,8 +143,8 @@ $popover-gap-inset: calc(-1 * #{$popover-gap-size});
 
 	@media screen and (prefers-reduced-motion: no-preference) {
 		&[data-animation="true"] {
-			animation: popover-animation #{variables.$db-transition-straight-emotional}
-				normal both;
+			animation: popover-animation
+				#{variables.$db-transition-straight-emotional} normal both;
 
 			&[data-delay="slow"] {
 				animation-delay: variables.$db-transition-duration-extra-slow;
@@ -162,6 +162,7 @@ $popover-gap-inset: calc(-1 * #{$popover-gap-size});
 @mixin show-popover($display: true) {
 	@if ($display) {
 		display: var(--db-show-popover-display, revert);
+		/* stylelint-disable-next-line at-rule-empty-line-before */
 	} @else {
 		visibility: var(--db-show-popover-visibility, visible);
 	}
