--- a/packages/components/src/components/navigation-item-group/navigation-item-group.scss
+++ b/packages/components/src/components/navigation-item-group/navigation-item-group.scss
@@ -45,6 +45,15 @@
 			}
 		}
 	}
+
+	&::after {
+		// Mobile navigation item is always sizing-md
+		// We add this fixed block-size to avoid issues with tree navigation
+		--db-puls-vertical-block-size: #{variables.$db-sizing-md};
+		--db-puls-vertical-inset-block-start: calc(
+			#{variables.$db-sizing-md} / 2
+		);
+	}
 }
 
 .db-navigation-item-group-back-button {
