--- a/packages/components/src/components/navigation/navigation.scss
+++ b/packages/components/src/components/navigation/navigation.scss
@@ -6,6 +6,124 @@
 @use "../navigation-item-group/navigation-item-group-menu-popover";
 @use "../navigation-item-group/navigation-item-group-menu-tree";
 
+%popover-navigation {
+	.db-navigation-item-group {
+		// MOBILE Sliding
+		@include screen-sizes.screen-min-max(
+			(
+				max: "sm"
+			)
+		) {
+			.db-navigation-item-group-expand-button {
+				// show/hide sub-navigation by click
+				&[aria-expanded="true"] {
+					~ .db-navigation-item-group-menu {
+						visibility: visible;
+
+						@media screen and (prefers-reduced-motion: no-preference) {
+							transition: visibility 0ms linear 0ms;
+							animation: show-right-to-left
+								#{variables.$db-transition-straight-show};
+						}
+
+						.db-navigation-item-group-menu {
+							inset-block: 0;
+						}
+					}
+				}
+
+				&:not(&[aria-expanded="true"]) {
+					@media screen and (prefers-reduced-motion: no-preference) {
+						~ .db-navigation-item-group-menu {
+							transition: visibility 0ms linear 410ms; // hide animation is 0.4s
+							animation: hide-right-to-left
+								#{variables.$db-transition-straight-hide};
+						}
+					}
+				}
+			}
+		}
+
+		// DESKTOP: show sub-navigation on hover
+		@include screen-sizes.screen-min-max(
+			(
+				min: "sm"
+			)
+		) {
+			.db-navigation-item-group-expand-button {
+				&:is(button),
+				> button {
+					&::after {
+						@media screen and (prefers-reduced-motion: no-preference) {
+							transition: form-components.$dropdown-icon-transition;
+						}
+					}
+
+					&:is(:hover, :focus-visible):not(
+							:has(
+								~ .db-navigation-item-group-menu[data-force-close="true"]
+							)
+						) {
+						~ .db-navigation-item-group-menu {
+							visibility: visible;
+						}
+
+						&::after {
+							transform: form-components.$dropdown-icon-transform;
+						}
+					}
+				}
+			}
+		}
+
+		.db-navigation-item-group-expand-button {
+			&:is(button),
+			> button {
+				// default icon for navigation
+				@include icons.set-icon("chevron_right", "after");
+			}
+		}
+
+		.db-navigation-item-group-menu {
+			@extend %db-navigation-item-group-menu-popover;
+		}
+	}
+}
+
+%tree-navigation {
+	.db-navigation-item-group {
+		display: flex;
+		flex-direction: column;
+
+		.db-navigation-item-group-expand-button {
+			&[aria-expanded="true"] {
+				&:is(button),
+				> button {
+					&::after {
+						transform: form-components.$dropdown-icon-transform;
+					}
+				}
+
+				~ .db-navigation-item-group-menu {
+					visibility: visible;
+					block-size: auto;
+					/* stylelint-disable-next-line declaration-property-value-no-unknown */
+					block-size: calc-size(auto, size);
+				}
+			}
+
+			&:is(button),
+			> button {
+				@extend %dropdown-icon;
+			}
+		}
+
+		.db-navigation-item-group-menu {
+			@extend %db-navigation-item-group-menu-tree;
+		}
+	}
+}
+
 .db-navigation {
 	-webkit-tap-highlight-color: transparent; /* for removing the highlight */
 	inline-size: 100%;
@@ -25,120 +143,11 @@
 	}
 
 	&:not([data-variant]),
-	&[data-variant="popover"],
-	&[data-variant="slide"] {
-		.db-navigation-item-group {
-			// MOBILE Sliding
-			@include screen-sizes.screen-min-max(
-				(
-					max: "sm"
-				)
-			) {
-				.db-navigation-item-group-expand-button {
-					// show/hide sub-navigation by click
-					&[aria-expanded="true"] {
-						~ .db-navigation-item-group-menu {
-							visibility: visible;
-
-							@media screen and (prefers-reduced-motion: no-preference) {
-								transition: visibility 0ms linear 0ms;
-								animation: show-right-to-left #{variables.$db-transition-straight-show};
-							}
-
-							.db-navigation-item-group-menu {
-								inset-block: 0;
-							}
-						}
-					}
-
-					&:not(&[aria-expanded="true"]) {
-						@media screen and (prefers-reduced-motion: no-preference) {
-							~ .db-navigation-item-group-menu {
-								transition: visibility 0ms linear 410ms; // hide animation is 0.4s
-								animation: hide-right-to-left #{variables.$db-transition-straight-hide};
-							}
-						}
-					}
-				}
-			}
-
-			// DESKTOP: show sub-navigation on hover
-			@include screen-sizes.screen-min-max(
-				(
-					min: "sm"
-				)
-			) {
-				.db-navigation-item-group-expand-button {
-					&:is(button),
-					> button {
-						&::after {
-							@media screen and (prefers-reduced-motion: no-preference) {
-								transition: form-components.$dropdown-icon-transition;
-							}
-						}
-
-						&:is(:hover, :focus-visible):not(
-								:has(
-										~ .db-navigation-item-group-menu[data-force-close="true"]
-									)
-							) {
-							~ .db-navigation-item-group-menu {
-								visibility: visible;
-							}
-
-							&::after {
-								transform: form-components.$dropdown-icon-transform;
-							}
-						}
-					}
-				}
-			}
-
-			.db-navigation-item-group-expand-button {
-				&:is(button),
-				> button {
-					// default icon for navigation
-					@include icons.set-icon("chevron_right", "after");
-				}
-			}
-
-			.db-navigation-item-group-menu {
-				@extend %db-navigation-item-group-menu-popover;
-			}
-		}
+	&[data-variant="popover"] {
+		@extend %popover-navigation;
 	}
 
 	&[data-variant="tree"] {
-		.db-navigation-item-group {
-			display: flex;
-			flex-direction: column;
-
-			.db-navigation-item-group-expand-button {
-				&[aria-expanded="true"] {
-					&:is(button),
-					> button {
-						&::after {
-							transform: form-components.$dropdown-icon-transform;
-						}
-					}
-
-					~ .db-navigation-item-group-menu {
-						visibility: visible;
-						block-size: auto;
-						/* stylelint-disable-next-line declaration-property-value-no-unknown */
-						block-size: calc-size(auto, size);
-					}
-				}
-
-				&:is(button),
-				> button {
-					@extend %dropdown-icon;
-				}
-			}
-
-			.db-navigation-item-group-menu {
-				@extend %db-navigation-item-group-menu-tree;
-			}
-		}
+		@extend %tree-navigation;
 	}
 }
