chore: update shell for vue

--- a/packages/components/src/components/shell/shell-desktop.scss
+++ b/packages/components/src/components/shell/shell-desktop.scss
@@ -17,7 +17,7 @@
 				"control-panel sub-navigation"
 				"control-panel main";
 			grid-template-columns:
-				[control-panel] auto
+				[control-panel] min-content
 				[main] 1fr;
 
 			&:has(
