--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -201,30 +201,14 @@ $db-min-inline-size: var(
 		$variant: "critical";
 	}
 
-	@if ($selector != textarea) {
+	& {
+		@if ($selector == textarea) {
+			--db-textarea-read-only: var(
+				--db-#{$variant}-bg-basic-level-1-default
+			);
+		}
+
 		@extend %db-#{$variant}-variables;
-		/* stylelint-disable-next-line at-rule-empty-line-before */
-	} @else {
-		// this is a workaround for the textarea scrollbar
-		--db-textarea-read-only: var(--db-#{$variant}-bg-basic-level-1-default);
-		--db-adaptive-bg-basic-transparent-full-default: var(
-			--db-#{$variant}-bg-basic-transparent-full-default
-		);
-		--db-adaptive-bg-basic-transparent-semi-default: var(
-			--db-#{$variant}-bg-basic-transparent-semi-default
-		);
-		--db-adaptive-bg-basic-transparent-hovered: var(
-			--db-#{$variant}-bg-basic-transparent-hovered
-		);
-		--db-adaptive-bg-basic-transparent-pressed: var(
-			--db-#{$variant}-bg-basic-transparent-pressed
-		);
-		--db-adaptive-on-bg-basic-emphasis-100-default: var(
-			--db-#{$variant}-on-bg-basic-emphasis-100-default
-		);
-		--db-adaptive-on-bg-basic-emphasis-60-default: var(
-			--db-#{$variant}-on-bg-basic-emphasis-60-default
-		);
 	}
 
 	#{$selector},
@@ -386,16 +370,6 @@ $input-valid-types:
 				--db-textarea-read-only,
 				#{colors.$db-adaptive-bg-basic-level-1-default}
 			) !important;
-		}
-
-		&:is(textarea) {
-			@each $state, $variant in (valid: successful, invalid: critical) {
-				&[data-custom-validity="#{$state}"] {
-					border: var(--db-border-width-3xs)
-						solid
-						var(--db-#{$variant}-on-bg-basic-emphasis-70-default);
-				}
-			}
 		}
 	}
 
