--- a/packages/components/src/components/textarea/textarea.scss
+++ b/packages/components/src/components/textarea/textarea.scss
@@ -8,20 +8,27 @@
 @use "../../styles/internal/scrollbar";
 
 %resize-textarea {
-	&[data-resize="none"] {
+	&[data-hide-resizer="true"] {
 		resize: none;
 	}
 
-	&[data-resize="both"] {
-		resize: both;
-	}
+	// TODO: Consolidate data-hide-resizer and data-resize attributes in the future
+	&:not([data-hide-resizer="true"]) {
+		&[data-resize="none"] {
+			resize: none;
+		}
 
-	&[data-resize="horizontal"] {
-		resize: horizontal;
-	}
+		&[data-resize="both"] {
+			resize: both;
+		}
 
-	&[data-resize="vertical"] {
-		resize: vertical;
+		&[data-resize="horizontal"] {
+			resize: horizontal;
+		}
+
+		&[data-resize="vertical"] {
+			resize: vertical;
+		}
 	}
 }
 
